[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://GUI.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1, -2, 0, 0, 0, 0, 481, 2, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 1, 721, 0, 0, 0, 0, 1, -2 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )
enemy = ExtResource( 3 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.595

[node name="Path" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="SpawnPoint" type="PathFollow2D" parent="Path"]
position = Vector2( 1, -2 )
rotation = 0.00833318

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="CanvasLayerHUD" parent="." instance=ExtResource( 4 )]

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="start_game" from="CanvasLayerHUD" to="." method="_on_CanvasLayerHUD_start_game"]
